--- a/dxrTest/dxrTest.vcxproj.filters
+++ b/dxrTest/dxrTest.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Shared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dxrTest.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Render.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,6 +68,9 @@
       <Filter>Resource Files</Filter>
     </FxCompile>
     <FxCompile Include="reproj.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="noise.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
   </ItemGroup>
