--- a/dxrTest/dxrTest.vcxproj.filters
+++ b/dxrTest/dxrTest.vcxproj.filters
@@ -76,6 +76,9 @@
     <FxCompile Include="computeLightning.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="pixelAddition.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
