--- a/dxrTest/imgui.ini
+++ b/dxrTest/imgui.ini
@@ -5,6 +5,11 @@ Collapsed=0
 
 [Window][Hello, world!]
 Pos=10,10
-Size=390,300
+Size=390,250
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=650,20
+Size=550,680
 Collapsed=0
 
